--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "node": "18.9.0",
+    "npm": "8.19.1"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
